# lib/db/src/schema/index.ts
@@ -2,6 +2,7 @@ export * from "./patients";
 export * from "./images";
 export * from "./tags";
 export * from "./patient-tags";
+export * from "./presentations";
 export * from "./settings";
 export * from "./conversations";
 export * from "./messages";
